# SLP-X3

./: README.md  Repository Architecture
ai/api/: endpoints.py
ai/hardware_acceleration/: tpu_training.py
backend/api/handlers/: agent.go
backend/cache/: memcached_config.go
blockchain/client/: index.ts
blockchain/contracts/: Cargo.toml
configs/: frontend_config.json
examples/: batch_transactions.js  interact_with_contract.js
frontend/: tsconfig.json
scripts/: monitor_system.sh
tests/blockchain/: test_contract.rs
workflows/: lint.yml  release.yml
